--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         #hover-button {
             position: fixed;
             bottom: 20px;
-            left: 20px;
+            right: 20px;
             z-index: 9999;
             padding: 10px 20px;
             background-color: #4CAF50;
