--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 1920px;
-            height: 1080px;
+            width: 1400px;
+            height: 800px;
             border: none;
         }
 
@@ -42,7 +42,7 @@
 <body>
     <div id="iframe-container">
         <!-- Background iframe -->
-        <iframe id="background-iframe" src="https://fractal.cloud.looker.com/embed/dashboards/38?allow_login_screen=true" width="1920px" height="1080px"></iframe>
+        <iframe id="background-iframe" src="https://fractal.cloud.looker.com/embed/dashboards/38?allow_login_screen=true"></iframe>
     </div>
 
     <!-- Click button -->
